# PragatiGIS

./: .gitignore  .replit  FLASK_INSTRUCTIONS.md  LOCAL-DATABASE-SETUP.md  cookies.txt  design_guidelines.md  local-database.db  local-database.db-shm  local-database.db-wal  package-lock.json  package.json  pyproject.toml  replit.md  reproduce-login.ts  sample-fra-claims.csv  server_log.txt  server_log_ai.txt  server_log_env.txt  server_log_final.txt  server_log_fixed.txt  server_log_new.txt  start-flask-backend.py  switch-to-local-db.js  switch-to-remote-db.js  test-login-failures.ts
attached_assets/: Authentic_Government_FRA_Claims_1758490400729.csv  FRA_Implementation_Analysis (1)_1757835326562.xlsx  Pasted--FRA-Atlas-Platform-Complete-Feature-Enhancement-Plan-Based-on-the-current-mockups-analysis-h-1757743922096_1757743922097.txt  Pasted-Analysis-Complete-Here-s-what-I-found-Functions-Components-Not-in-Use-Can-be-removed-Duplicat-1757845592428_1757845592430.txt  Pasted-Below-is-a-prioritized-step-by-step-backend-work-plan-based-on-your-workflow-diagram-and-the-go-1757835230963_1757835230966.txt  Pasted-FRA-Atlas-Platform-Project-Brief-for-AI-Development-Agent-This-document-provides-a-comprehensive--1757743904536_1757743904542.txt  Pasted-i-am-practice-in-smart-india-hackaton-and-i-have-taken-this-ps-Problem-Statement-ID-25108-Proble-1758351616795_1758351616798.txt
client/: index.html
flask-backend/: app.py  models.py  requirements.txt  routes.py  run_flask.py
flask_backend/: app.py  run.py
server/: data-import.ts  db-config.ts  db-local.ts  db-setup-sqlite.ts  (+11 more)
(+55 files in other folders)
