[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt==4.1.2",
    "flask-cors==4.0.0",
    "flask-sqlalchemy==3.0.5",
    "flask==3.0.0",
    "opencv-python==4.8.1.78",
    "openpyxl==3.1.2",
    "pandas==2.1.4",
    "pillow==10.1.0",
    "pytesseract==0.3.10",
    "python-dotenv==1.0.0",
    "werkzeug==3.0.1",
    "flask-session==0.5.0",
    "psycopg2-binary>=2.9.10",
    "pdf2image>=1.17.0",
]
